# richrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: emoji.rs  live.rs  markdown.rs  panels.rs  progress.rs  spinners.rs  status.rs  styling.rs  syntax.rs  tables.rs  trees.rs
python_tests/: conftest.py  requirements.txt  test_comparison.py  test_style.py
scripts/: record_all.py  record_demos.py
src/: align.rs  box_chars.rs  color.rs  columns.rs  console.rs  emoji.rs  errors.rs  highlighter.rs  lib.rs  live.rs  logging.rs  main.rs  markdown.rs  markup.rs  measure.rs  padding.rs  panel.rs  pretty.rs  progress.rs  prompt.rs  protocol.rs  rule.rs  segment.rs  spinner.rs  status.rs  style.rs  syntax.rs  table.rs  test_runner.rs  text.rs  theme.rs  traceback.rs  tree.rs
